minor network & locale changes

--- a/resources/locales/en/translation.yaml
+++ b/resources/locales/en/translation.yaml
@@ -65,7 +65,7 @@ basic:
         🧠 You can contact them for any Space question
     location:
         address: |
-            🏫 Our address: Armenia, Yerevan, Baghramyan Avenue 60 (entrance from the street)
+            🏫 Our address: Armenia, Yerevan, Marshal Baghramyan Avenue 60 (entrance from the street)
     donate: |
         💸 Hackspace is not a commercial project and exists solely on donations from participants.
         We contribute to the development of the space: paying rent and utilities, taking care of the space, helping in purchasing equipment.
