--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -65,7 +65,7 @@ basic:
         🧠 Вы можете обратиться к ним по любому спейсовскому вопросу
     location:
         address: |
-            🏫 Наш адрес: Армения, Ереван, проспект Баграмяна 60 (вход с улицы)
+            🏫 Наш адрес: Армения, Ереван, проспект Маршала Баграмяна 60 (вход с улицы)
     donate: |
         💸 Хакспейс не является коммерческим проектом и существует исключительно на пожертвования участников.
         Мы вносим свой вклад в развитие спейса: оплата аренды и коммуналки, забота о пространстве, помощь в приобретении оборудования.
