Decorator for access control based on chats

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -1,7 +1,9 @@
 general:
-    error: Что-то пошло не так
-    chatnotallowed: ⚠️ Команда доступна только в групповых чатах спейса
-    nouser: ⚠️ Не нашел такого пользователя, пусть он напишет что-нибудь мне в личку
+    errors:
+        generic: Что-то пошло не так
+        chatnotallowed: ⚠️ Команда доступна только в групповых чатах спейса
+        restricted: 📵 Сорян, нужно быть {{required}} для выполнения этой команды
+        nouser: ⚠️ Не нашел такого пользователя, пусть он напишет что-нибудь мне в личку
     buttons:
         menu: 🏠 Меню
         back: ↩️ Назад
@@ -249,8 +251,6 @@ admin:
     removeUser:
         success: 🗑 Удалил {{username}}
         fail: ⚠️ Не удалось удалить пользователя (может не нашли?)
-    messages:
-        restricted: "📵 Сорян, нужно быть {{required}} для выполнения этой команды"
 birthday:
     nextbirthdays: |
         🎂 В этом месяце празднуют свои днюхи:
