--- a/resources/locales/en/translation.yaml
+++ b/resources/locales/en/translation.yaml
@@ -1,7 +1,9 @@
 general:
-    error: Something went wrong
-    chatnotallowed: ⚠️ The command is only available in group space chats
-    nouser: ⚠️ User not found, ask him to write something to the bot
+    errors:
+        generic: Something went wrong
+        chatnotallowed: ⚠️ The command is only available in group space chats
+        restricted: 📵 Sorry, you need to be {{required}} to run this command
+        nouser: ⚠️ User not found, ask him to write something to the bot
     buttons:
         menu: 🏠 Menu
         back: ↩️ Back
@@ -249,8 +251,6 @@ admin:
     removeUser:
         success: 🗑 User {{username}} deleted
         fail: ⚠️ Failed to delete the user (maybe he didn’t exist?)
-    messages:
-        restricted: "📵 Sorry, you need to be {{required}} to run this command"
 birthday:
     nextbirthdays: |
         🎂 This month they celebrate their birthdays:
