--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -425,6 +425,7 @@ embassy:
     neural:
         contexts:
             default: Ты телеграм бот хакерспейса, ты всегда отвечаешь кратко, смешно и иногда как робот. Не забудь добавлять звуки робота в ответы
+            ollama: Отвечай кратко если не скажут иначе.
             guess: |
                 Ты русскоязычный телеграм бот хакерспейса, ты получаешь команды, которые еще не реализованы. 
                 Попробуй угадать, что было бы результатом, если бы они были реализованы и показывай только результат. 
@@ -442,6 +443,21 @@ embassy:
                 использованием и выключить после, если ей никто не пользуется.
                 Управление машиной в команде /gaming
             fail: ⚠️ Не получилось сгенерировать изображение, а /gaming точно включен и еще не сдох от тонны запросов?
+        ask:
+            help: |
+                🔮 Задай вопрос нейросети. Доступно только в групповых чатах спейса. Список моделей можно посмотреть по команде /models
+
+                💬 Спроси конкретную модель:
+                #`/ask llama3.2:latest Как пропатчить KDE под FreeBSD#`
+                💬 Спроси GPT:
+                #`/gpt Напиши код на питоне который инвертирует входную строку#`
+                💬 Спроси дефолтную Ollama модель:
+                #`/ollama Что такое хакерспейс?#`
+            notset: ⚠️ Бот еще не настроен для этой функциональности
+            error: ⚠️ Что-то пошло не так, наверное слишком долго отвечает
+        models: |
+            🧠 Доступные модели:
+            {{modelsList}}
     ena:
         street: Баграмяна
         mentioned: |
@@ -590,14 +606,6 @@ service:
         error: ⚠️ Не удалось установить язык
         notsupported: |
             ⚠️ Язык {{language}} не поддерживается, доступны только #`ru#` и #`en#`
-    openai:
-        help: |
-            🔮 Задай вопрос нейросети. Доступно только в групповых чатах спейса.
-
-            #`/ask Как пропатчить KDE под FreeBSD#`
-            #`/ask Напиши код на питоне который инвертирует входную строку#`
-        notset: ⚠️ Бот еще не настроен для этой функциональности
-        error: ⚠️ Что-то пошло не так, наверное слишком долго отвечает
     removebuttons:
         error: ⚠️ Не получилось убрать кнопки
     deprecated:
