--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -454,7 +454,7 @@ embassy:
                 💬 Спроси дефолтную Ollama модель:
                 #`/ollama Что такое хакерспейс?#`
             notset: ⚠️ Бот еще не настроен для этой функциональности
-            error: ⚠️ Что-то пошло не так, наверное слишком долго отвечает
+            error: ⚠️ Что-то пошло не так, а модель существует и сервак не сдох?
         models: |
             🧠 Доступные модели:
             {{modelsList}}
