--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -251,6 +251,30 @@ admin:
     removeUser:
         success: 🗑 Удалил {{username}}
         fail: ⚠️ Не удалось удалить пользователя (может не нашли?)
+    copy:
+        help: |
+            📷 Скопировать сообщение из reply в выбранный чат
+
+            #`/copy main#`
+            #`/copy chat_id#`
+
+            Подсказки:
+            - Доступные именованные чаты: {{chatsList}}
+            - Узнать id текущего чата: /chatid
+        nochat: Specified chat not found
+        success: Message was copied to {{target}}
+    custom:
+        help: |
+            ✉️ С помощью этой команды можно сделать кастомное сообщение с изображением и кнопками. Пример: 
+
+            #`/custom Some text
+
+            [{"text":"link","url":"https://hackem.cc"}]
+            [{"text":"public cmd","cmd":"join"},{"text":"private cmd","bot":"join"}]#`
+
+            Подсказки:
+            - Для отправки изображения нужно добавить команду в подпись к прикрепленному изображению
+            - Результат можно скопировать в любой чат через reply с помощью #`/copy chatname_or_id#`
 birthday:
     nextbirthdays: |
         🎂 В этом месяце празднуют свои днюхи:
