--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -637,6 +637,13 @@ service:
             🚫 Команда #`{{command}}#` устарела и больше не поддерживается
         replaced: |
             🔄 Вместо нее используй #`{{replacement}}#`
+    tldr:
+        prompt: |
+            Это сообщения из чата в мессенджере. Укажи основные обсуждаемые темы и кто о них говорил, при необходимости сделай краткое резюме
+        help: |
+            📝 Используя эту команду, можно получить краткое резюме основных обсуждаемых тем в чате. ИИ проанализирует последние n сообщений и попытается их обобщить.        
+            #`/tldr n#` - где n - количество последних сообщений для анализа (по умолчанию 1000)
+        notready: В настоящее время эта фича работает в тестовом режиме для чатов без топиков.
     token:
         help: |
             🤖 С помощью этой команды можно управлять токеном для доступа к API (пока одним)
