--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -821,7 +821,10 @@ meme:
             🖐 {{from}} slaps {{target}}
         help: |
             🖐 С помощью этой команды можно slap кого-нибудь
-            #`/slap username#`
+            #`/slap username#``
+            🤦 Make it personal
+            #`/slapp username#`
+        no_avatar: Чет не нашел аватарку для этого юзера, слапни его по старинке
     hug:
         user: |
             🫂 {{from}} заботливо обнимает {{target}}
