--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -128,7 +128,7 @@ basic:
         то наши требования просты:
         - Дружелюбность и неконфликтность.
         - Готовность участвовать в жизни сообщества.
-        - Регулярные пожертвования (естественно в рамках ваших возможностей).
+        - Регулярные пожертвования (естественно, в рамках ваших возможностей).
 
         🧙🏻‍♂️ Обратитесь к любому резиденту спейса, он представит вашу кандидатуру Совету Спейса.
     events:
@@ -629,7 +629,7 @@ service:
         success: ✅ Язык установлен как {{language}}
         error: ⚠️ Не удалось установить язык
         notsupported: |
-            ⚠️ Язык {{language}} не поддерживается, доступны только #`ru#` и #`en#`
+            ⚠️ Язык {{language}} не поддерживается, доступны только #`ru#`, #`eo#`, #`uk#` и #`en#`
     removebuttons:
         error: ⚠️ Не получилось убрать кнопки
     deprecated:
@@ -682,7 +682,7 @@ status:
         reopen: 🚪 Открыть снова
         reclose: 🔒 Закрыть снова
         whoinside: 📹 Кто внутри
-        whoelse: ❓А кто еще будет?
+        whoelse: ❓ А кто еще будет?
         save: 📷 Сохранить
     profile:
         donated: |
