Fix yaml formatting for uk lang

--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -1,29 +1,29 @@
 general:
-  errors:
-    generic: Щось пішло не так
-    chatnotallowed: ⚠️ Команда доступна тільки в групових чатах спейсу
-    restricted: "📵 Вибач, потрібно бути {{required}} для виконання цієї команди"
-    nouser: ⚠️ Не знайшов такого користувача, нехай він напише щось мені в лічку
-  buttons:
-    menu: "🏠 Меню"
-    back: "↩️ Назад"
-    cancel: "❌ Скасувати"
-    ok: "🆗 Ок"
-    'yes':"✅ Так"
-    'no': "❌ Ні"
-    more: "📖 Детальніше"
-    readmore: "📚 Читати ще"
+    errors:
+        generic: Щось пішло не так
+        chatnotallowed: ⚠️ Команда доступна тільки в групових чатах спейсу
+        restricted: "📵 Вибач, потрібно бути {{required}} для виконання цієї команди"
+        nouser: ⚠️ Не знайшов такого користувача, нехай він напише щось мені в лічку
+    buttons:
+        menu: "🏠 Меню"
+        back: "↩️ Назад"
+        cancel: "❌ Скасувати"
+        ok: "🆗 Ок"
+        yes: "✅ Так"
+        no: "❌ Ні"
+        more: "📖 Детальніше"
+        readmore: "📚 Читати ще"
 basic:
     help: "{{availableCommands}}{{globalModifiers}}"
-      about: |
+    about: |
         🏫 Hacker Embassy (Єреванський Хакерспейс) - це простір, де збираються однодумці, захоплені технологіями та творчістю. Ми разом працюємо над проектами, ділимося ідеями та знаннями, просто спілкуємося.
-        
+
         💻 Ти можеш почитати про нас детальніше на нашому сайті https://hackem.cc/
 
         📓 Інформацію про наші проекти, обладнання та правила ми зберігаємо на нашій вікі https://lore.hackem.cc/
-        
+
         🤖 Мій код відкритий та вільний, розробка ведеться на гітхабі: https://github.com/hackerembassy/hackerembassy-tg-bot 
-        
+
         🍕 Ми завжди раді новим резидентам. Хочеш дізнатися, як стати учасником? Тисни команду /join
     issue:
         space:
