--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -227,7 +227,7 @@ basic:
             nani: 💥 Նանի
             cat: 🐱 Կատու
             dog: 🐶 Շուն
-            cab: ​​🥷 Տաքսի
+            cab: ​​🥷 Քաբ
             cock: 🐔 Աքաղաղ
             sad: 🎺 Տխուր
             badumtss: 🥁 Բադումց
