small fix for multilingual message translations to also show english

--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -596,10 +596,12 @@ needs:
 service:
     welcome:
         confirm: |
+            🇬🇧 Hello {{newMember}}. Select your language if you are not a bot, otherwise you won’t be able to write here :)        
             🇦🇲 Ողջույն {{newMember}}։ Ընտրեք ձեր լեզուն, եթե բոտ չեք, հակառակ դեպքում չեք կարողանա այստեղ գրել :)
             🇷🇺 Привет, {{newMember}}. Выбери свой язык, если ты не бот, иначе не сможешь тут писать :)
         captcha: Սեղմեք ինձ
         main: |
+            🇬🇧 Welcome to our cozy corner, {{newMember}}. I'm hackerspace bot manager. You can PM me to chat so I can briefly tell you about us
             🇦🇲 Բարի գալուստ մեր հարմարավետ անկյուն, {{newMember}}։ Ես հաքերային տարածքի բոտ-կառավարիչն եմ։ Դուք կարող եք ինձ անձնական հաղորդագրություն ուղարկել՝ զրուցելու համար, որպեսզի ես կարողանամ հակիրճ պատմել ձեզ մեր մասին
         offtopic: |
             🫖 Բարի գալուստ մեր հաքերային տարածքի չաթի թեմային, {{newMember}}
