Fix minor inconsistencies in Ukrainian translation

--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -101,7 +101,7 @@ basic:
               
         🛍 Якщо хочеш задонатити натурою (oh my!) або іншим способом - тисни /donate
     donateCard: |
-        💌 Для того, щоб задонатити цим способом, напишіть нашим бухгалтерам. Вони підкажуть вам фактични реквізити або ви зможете домовитися про час та місце передачі.
+        💌 Для того, щоб задонатити цим способом, напишіть нашим бухгалтерам. Вони підкажуть вам фактичні реквізити або ви зможете домовитися про час та місце передачі.
           
         Ось вони: {{accountantsList}}
 
@@ -116,7 +116,7 @@ basic:
         🧑🏻‍🏫 Якщо ви знаходитесь в Єревані, захоплені технологіями та шукаєте однодумців, заходьте до нас.
         - Ми проводимо регулярний день відкритих дверей щоп'ятниці о 20.00.
         - Щонеділі о 20.00 у нас проходить English Club, де можна попрактикувати свою англійську.
-        - Часто по понеділках о 20.00 ми проводимо музичні зустрічі: приносимо гітари, граємо в Rocksmith та джемимо.
+        - Часто по понеділках о 20.00 ми проводимо музичні зустрічі: приносимо гітари, граємо в Rocksmith та джемуємо.
         - В будь-який інший день спейс теж може прийняти гостей, вводь команду {{statusCommand}} щоб дізнатися чи відкритий спейс і чи є там хтось.
 
         💸 Відвідування вільні (безкоштовні), але будь-які донати на допомогу нашим проектам та оренду дуже вітаються.
@@ -135,7 +135,7 @@ basic:
         text: |
             🎭 Що у нас відбувається:
             - Майстеркласи та презентації на різні теми від 3D друку, моделювання та паяння до нейромереж, алгоритмів доведення теорем та шибарі. Дату анонсуємо заздалегідь у чатику.
-            - Часто по понеділках о 21.00 ми проводимо музичні зустрічі: приносимо гітари, граємо в Rocksmith та джемимо.
+            - Часто по понеділках о 21.00 ми проводимо музичні зустрічі: приносимо гітари, граємо в Rocksmith та джемуємо.
             - Щоп'ятниці о 20.00 у нас традиційний день відкритих дверей, спілкуємося, знайомимося та тусимо.
             - В будь-який інший день спейс теж може прийняти гостей, дивись {{statusCommand}} спейсу, щоб дізнатися більше.
 
