--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -270,7 +270,7 @@ admin:
             [{"text":"public cmd","cmd":"join"},{"text":"private cmd","bot":"join"}]#`
 
             Նշումներ.
-            - Նկար/պատկեր ուղարկելու համար այս հրամանը ավելացրու նկարի մակագրությանը 
+            - Նկար/պատկեր ուղարկելու համար այս հրամանը ավելացրու նկարի մակագրությանը
             - Այս հաղորդագրությունը կարող է պատճենվել մեկ այլ չաթ՝ օգտագործելով #`/copy chatname_or_id#` հրամանը՝ որպես պատասխան հաղորդագրությանը
 birthday:
     nextbirthdays: |
@@ -310,10 +310,13 @@ embassy:
     webcam:
         location:
             downstairs: Գետնային հարկ
-            downstairs2: Գետնային հարկ 2
-            kitchen: Խոհանոց
             upstairs: Երկրորդ հարկ
+            upstairs_ptz: Երկրորդ հարկ PTZ
+            balcony: Բալանց
+            kitchen: Խոհանոց
+            meeting_room: Մեթինգ հարկ
             outdoors: Մուտքի դուռ
+            gateway: Միջանցք
             facecontrol: Դեմք քընթրոլ
             printers: Տպիչ
         fail: |
@@ -428,7 +431,7 @@ embassy:
             🗣 Այս հրամանի միջոցով կարող ես GIF պատկեր ցուցադրել space-ի ներքին մոնիտորի վրա, օրինակ՝ #`/gif https://c.tenor.com/WsPxFXB9CkUAAAAC/tenor.gif#`
             Մաքրել էկրանը #`/gif clear#` հրամանով
     play:
-        help: 🗣 Այս հրամանի միջոցով կարող ես ցանկացած հղումից ձայն նվագարկել 
+        help: 🗣 Այս հրամանի միջոցով կարող ես ցանկացած հղումից ձայն նվագարկել
         success: 🗣 Ձայնն ուղարկվել է բարձրախոսին
         fail: ⚠️ Չհաջողվեց նվագարկել
     stop:
@@ -505,10 +508,10 @@ funds:
         💾 Ահա մեր բոլոր հիմնադրամային միջոցների արխիվը
         {{list}}
     addfund:
-        success: 💰 Ավելացվել է {{fundName}} հավաքագրում՝ {{targetValue}} {{currency}} թիրախով 
+        success: 💰 Ավելացվել է {{fundName}} հավաքագրում՝ {{targetValue}} {{currency}} թիրախով
         fail: ⚠️ Չհաջողվեց ավելացնել վճարը (գուցե արդեն գոյություն ունի՞)
     updatefund:
-        success: 🔄 Թարմացվել է {{fundName}} հավաքագրում՝ նոր {{targetValue}} {{currency}} թիրախով 
+        success: 🔄 Թարմացվել է {{fundName}} հավաքագրում՝ նոր {{targetValue}} {{currency}} թիրախով
         fail: ⚠️ Չհաջողվեց թարմացնել հավաքագրումը (գուցե սխալ անուն՞)
     removefund:
         success: 🗑 {{fundName}} հավաքագրումը հեռացվել է
@@ -537,7 +540,7 @@ funds:
         success: 🗑 [id:{{donationId}}] նվիրատվությունը հեռացվել է
         fail: ⚠️ Չհաջողվեց ջնջել նվիրատվությունը (գուցե այն գոյություն չունե՞ր)
     changedonation:
-        success: 🔄 Թարմացվել է [id:{{donationId}}] նվիրատվությունը 
+        success: 🔄 Թարմացվել է [id:{{donationId}}] նվիրատվությունը
         fail: ⚠️ Չհաջողվեց թարմացնել նվիրատվությունը (գուցե այն գոյություն չունե՞ր)
     showcosts:
         fail: Ընթացիկ վարձավճարը չի գտնվել
@@ -565,7 +568,7 @@ funds:
 
             {{donationList}}
             💰 Ընդհանուր {{total}} {{currency}} օր
-            
+
             🛂 Դու կարող ես փոխանցել նվիրատվությունը օգտագործելով հետևյալ հրամանները.
             #`/tosafe id#` - Հատկացնել նվիրատվությունը Safe-ին ըստ ID-ի (կամ մի քանի ID-ի, բաժանե՛լ ստորակետերով)
             #`/topaid id#` - Նշել նվիրատվությունը որպես վճարված ըստ ID-ի (գնացել է հավաքագրման նպատակին)
@@ -595,7 +598,7 @@ needs:
 service:
     welcome:
         confirm: |
-            🇬🇧 Hello {{newMember}}. Select your language if you are not a bot, otherwise you won’t be able to write here :)        
+            🇬🇧 Hello {{newMember}}. Select your language if you are not a bot, otherwise you won’t be able to write here :)
             🇦🇲 Բարև՜ {{newMember}}։ Ընտրիր քո լեզուն, եթե բոտ չես հանդիսանում, հակառակ դեպքում ուղղակի չես կարողանա շարունակել :)
             🇷🇺 Привет, {{newMember}}. Выбери свой язык, если ты не бот, иначе не сможешь тут писать :)
         captcha: Սեղմիր ինձ
@@ -610,7 +613,7 @@ service:
             Կազմակերպչական հարցերն ու հենց space-ին վերաբերող հարցերն ավելի լավ է գրել հիմնական չաթում՝ @hacker_embassy
         horny: |
             🍆 Ohh, myyy. We have {{newMember}} cuming into our hot and cozy place.
-            Welcum to the club, buddy/gal! 
+            Welcum to the club, buddy/gal!
 
             🍑 Members, please /slap our new guest as juicy as you can.
         key: |
@@ -726,7 +729,7 @@ status:
             ⚠️ MAC հասցեն սահմանված չէ։ Ավելացրու այն /mac հրամանով
         set: 🕺 Ավտոմատ մուտքը և ավտոմատ ելքը միացված են օգտատեր {{username}}-ի համար՝ {{usermac}} MAC հասցեով
         removed: 🚷 Ավտոմատ մուտքը և ավտոմատ ելքը անջատված են օգտատեր {{username}}-ի համար
-        isset: 🕺 Ավտոմատ մուտքը և ավտոմատ ելքը միացված են օգտատեր {{username}}-ի համար՝ {{usermac}} MAC հասցեով 
+        isset: 🕺 Ավտոմատ մուտքը և ավտոմատ ելքը միացված են օգտատեր {{username}}-ի համար՝ {{usermac}} MAC հասցեով
         isghost: 👻 Ավտոմատ մուտքը և ավտոմատ ելքը միացված են օգտատեր {{username}}-ի համար՝ {{usermac}} MAC հասցեով միայն ռեզիդենտների համար
         isnotset: 🚷 Ավտոմատ մուտքը և ավտոմատ ելքը անջատված են օգտատեր {{username}}-ի համար
         nouser: ⚠️ Դու չես գտնվել տվյալների բազայում (bu՞g)
@@ -833,7 +836,7 @@ topics:
         error: ⚠️ Մի բան այն չէ
         notfound: ⚠️ Թեման չի գտնվել
         empty: Դեռ ոչինչ չկա
-        nosubscribers: 🌚 {{topic}} թեմային ոչ մեկ չի բաժանորդագրվել 
+        nosubscribers: 🌚 {{topic}} թեմային ոչ մեկ չի բաժանորդագրվել
     buttons:
         topics: 🗃 Բոլոր թեմաները
         subscriptions: 💌 Բաժանորդագրություններ
@@ -904,5 +907,3 @@ topics:
             📟 Իմ բաժանորդագրությունները - /subscriptions
         started: 📯 Տեղեկագրի բաշխումը {{topic}}-ի բաժանորդներին սկսվել է։ Անձնական հաղորդագրություն կստանա {{count}} հետևորդ {{eta}} վայրկյանի ընթացքում
         finished: ✅ Տեղեկագրի բաշխումը {{topic}}-ի բաժանորդներին ավարտվել է։ Անձնական հաղորդագրություն հաջողությամբ ստացել է {{received}}/{{count}} բաժանորդ։
-
-
