--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -22,7 +22,7 @@ basic:
 
         📓 Інформацію про наші проекти, обладнання та правила ми зберігаємо на нашій вікі https://lore.hackem.cc/
 
-        🤖 Мій код відкритий та вільний, розробка ведеться на гітхабі: https://github.com/hackerembassy/hackerembassy-tg-bot 
+        🤖 Мій код відкритий та вільний, розробка ведеться на гітхабі: https://github.com/hackerembassy/hackerembassy-tg-bot
 
         🍕 Ми завжди раді новим резидентам. Хочеш дізнатися, як стати учасником? Тисни команду /join
     issue:
@@ -44,7 +44,7 @@ basic:
                 "{{issue}}"
         bot:
             help: |
-                📮 За допомогою цієї команди можна повідомити про баг у боті. 
+                📮 За допомогою цієї команди можна повідомити про баг у боті.
 
                 Можна створити нову issue на гітхабі, якщо такої ще немає. Або можна надіслати багрепорт прямо в телеграмі, наприклад, ось так:
                 #`/bug Мене не чекінить автоматично, коли я приходжу до спейсу#`
@@ -79,7 +79,7 @@ basic:
         Задонатити нам можна наступними способами:
         💵 Готівкою при зустрічі (найкращий варіант)
           {{donateCashCommand}}
-        💰 Криптовалюта 
+        💰 Криптовалюта
           {{cryptoCommands}}
         💳 Банківська картка Visa/Mastercard Вірменії
           {{donateCardCommand}}
@@ -92,17 +92,17 @@ basic:
         {{accountantsList}}
     donateCoin: |
         🪙 Використовуй цей QR код або адресу нижче, щоб задонатити нам в {{coin.fullname}}.
-          
+
         ⚠️ Зверни увагу, що мережа {{coin.network}} і ти використовуєш правильну адресу:
         #`{{coin.address}}#`
-              
+
         💌 Не забудь написати бухгалтеру перед своїм донатом і скинути код транзакції або посилання
         в {{coin.explorer}} або аналогічному сервісі після
-              
+
         🛍 Якщо хочеш задонатити натурою (oh my!) або іншим способом - тисни /donate
     donateCard: |
         💌 Для того, щоб задонатити цим способом, напишіть нашим бухгалтерам. Вони підкажуть вам фактичні реквізити або ви зможете домовитися про час та місце передачі.
-          
+
         Ось вони: {{accountantsList}}
 
         🛍 Якщо хочеш задонатити натурою або іншим способом - тисни /donate
@@ -313,10 +313,13 @@ embassy:
     webcam:
         location:
             downstairs: Перший поверх
-            downstairs2: Перший поверх 2
-            kitchen: Кухня
             upstairs: Другий поверх
+            upstairs_ptz: Другий поверх (PTZ)
+            balcony: Балкон
+            kitchen: Кухня
+            meeting_room: Переговорка
             outdoors: Вхідні двері
+            gateway: Коридор
             facecontrol: Обличчя
             printers: Принтерна
         fail: |
@@ -439,7 +442,7 @@ embassy:
         fail: ⚠️ Не вдалося зупинити відтворення
     availablesounds:
         success: |
-            🎶 Список доступних звуків 
+            🎶 Список доступних звуків
             {{sounds}}
         fail: ⚠️ Не вдалося знайти доступні звуки
     hey:
@@ -493,7 +496,7 @@ embassy:
 funds:
     funds: |
         💰 Ось наші поточні збори:
-          
+
         {{list}}💸 Щоб дізнатися, як нам допомогти - тисни /donate
     fund:
         nofund: Збір не знайдено
@@ -613,7 +616,7 @@ service:
             Організаційні питання та питання, що стосуються самого спейсу, краще писати в основному чаті @hacker_embassy
         horny: |
             🍆 Ohh, myyy. We have {{newMember}} cuming into our hot and cozy place.
-            Welcum to the club, buddy/gal! 
+            Welcum to the club, buddy/gal!
 
             🍑 Members, please /slap our new guest as juicy as you can.
         key: |
@@ -788,9 +791,9 @@ status:
         fail: "Не можу зрозуміти, чи варто тобі йти в спейс сьогодні. Спробуй ще раз"
     emoji:
         help: |
-            🐥 За допомогою цієї команди можна встановити емодзі 
+            🐥 За допомогою цієї команди можна встановити емодзі
 
-            #`/setemoji 🍗#` - Встановити свій емодзі 
+            #`/setemoji 🍗#` - Встановити свій емодзі
             #`/setemoji status#` - Подивитися свій встановлений в боті емодзі
             #`/setemoji remove#` - Видалити свій емодзі з бота
         fail: ⚠️ Вкажіть валідний емодзі.
