--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -17,12 +17,12 @@ basic:
     help: "{{availableCommands}}{{globalModifiers}}"
     about: |
         🏫 Hacker Embassy (Ереванский Хакерспейс) - это пространство, где собираются единомышленники, увлеченные технологиями и творчеством. Мы вместе работаем над проектами, делимся идеями и знаниями, просто общаемся.
-          
+
         💻 Ты можешь почитать о нас подробнее на нашем сайте https://hackem.cc/
 
         📓 Информацию о наших проектах, оборудовании и правилах мы храним на нашей вики https://lore.hackem.cc/
 
-        🤖 Мой код открыт и свободен, разработка ведётся на гитхабе: https://github.com/hackerembassy/hackerembassy-tg-bot 
+        🤖 Мой код открыт и свободен, разработка ведётся на гитхабе: https://github.com/hackerembassy/hackerembassy-tg-bot
 
         🍕 Мы всегда рады новым резидентам. Хочешь узнать, как стать участником? Жми команду /join
     issue:
@@ -44,7 +44,7 @@ basic:
                 "{{issue}}"
         bot:
             help: |
-                📮 С помощью этой команды можно сообщить о баге в боте. 
+                📮 С помощью этой команды можно сообщить о баге в боте.
 
                 Можно создать новую issue на гитхабе, если такой еще нет. Или можно отправить багрепорт прямо в телеграме, например, вот так:
                 #`/bug Меня не чекинит автоматически, когда я прихожу в спейс#`
@@ -71,7 +71,7 @@ basic:
     donate: |
         💸 Хакспейс не является коммерческим проектом и существует исключительно на пожертвования участников.
         Мы вносим свой вклад в развитие спейса: оплата аренды и коммуналки, забота о пространстве, помощь в приобретении оборудования.
-        Мы будем рады любой поддержке. 
+        Мы будем рады любой поддержке.
 
         🫶 Начиная с определенной суммы донатов за последние {{period}} месяца вы получаете статус нашего спонсора:
         {{sponsorshipTierList}}
@@ -79,7 +79,7 @@ basic:
         Задонатить нам можно следующими способами:
         💵 Наличкой при встрече (самый лучший вариант)
           {{donateCashCommand}}
-        💰 Криптовалюта 
+        💰 Криптовалюта
           {{cryptoCommands}}
         💳 Банковская карта Visa/Mastercard Армении
           {{donateCardCommand}}
@@ -92,17 +92,17 @@ basic:
         {{accountantsList}}
     donateCoin: |
         🪙 Используй этот QR код или адрес ниже, чтобы задонатить нам в {{coin.fullname}}.
-          
+
         ⚠️ Обрати внимание, что сеть {{coin.network}} и ты используешь правильный адрес:
         #`{{coin.address}}#`
-              
+
         💌 Не забудь написать бухгалтеру перед своим донатом и скинуть код транзакции или ссылку
         в {{coin.explorer}} или аналогичном сервисе после
-              
+
         🛍 Если хочешь задонатить натурой (ohh my) или другим способом - жми /donate
     donateCard: |
-        💌 Для того, чтобы задонатить этим способом, напишите нашим бухгалтерам. Они подскажут вам текущие реквизиты или вы сможете договориться о времени и месте передачи. 
-          
+        💌 Для того, чтобы задонатить этим способом, напишите нашим бухгалтерам. Они подскажут вам текущие реквизиты или вы сможете договориться о времени и месте передачи.
+
         Вот они: {{accountantsList}}
 
         🛍 Если хочешь задонатить натурой или другим способом - жми /donate
@@ -133,7 +133,7 @@ basic:
         🧙🏻‍♂️ Обратитесь к любому резиденту спейса, он представит вашу кандидатуру Совету Спейса.
     events:
         text: |
-            🎭 Что у нас происходит: 
+            🎭 Что у нас происходит:
             - Мастерклассы и презентации на различные темы от 3D печати, моделирования и пайки до нейросетей, алгоритмов доказательства теорем и шибари. Дату анонсируем заранее в чатике.
             - Часто по понедельникам в 21.00 мы проводим музыкальные встречи: приносим гитары, играем в Rocksmith и джемим.
             - Каждую пятницу в 20.00 у нас традиционный день открытых дверей, общаемся, знакомимся и тусим.
@@ -159,13 +159,13 @@ basic:
         entrance: |
             🎁 Вход как всегда свободный, но мы будем рады любым донатам на поддержку пространства.
         notoday: |
-            🏖 Сегодня в спейсе запланированных мероприятий нет. 
+            🏖 Сегодня в спейсе запланированных мероприятий нет.
 
             Но, если спейс открыт для гостей, то можно просто приходить позаниматься интересными проектами или потусить. Смотри /status в течение дня.
         error: 📂 Мероприятия не найдены
     start:
         text: |
-            🇬🇧 Привет хакерчанин. Я бот для менеджмента всяких процессов в спейсе. 
+            🇬🇧 Привет хакерчанин. Я бот для менеджмента всяких процессов в спейсе.
             [Я нахожусь в разработке, ты можешь поучаствовать в моем развитии в репозитории на гитхабе спейса, обращайся к #[korn9509#]#(t.me/korn9509#)].
 
             🔖 Для получения полного списка команд доступных тебе вводи /help. Некоторые команды видны только резидентам.
@@ -265,7 +265,7 @@ admin:
         success: Message was copied to {{target}}
     custom:
         help: |
-            ✉️ С помощью этой команды можно сделать кастомное сообщение с изображением и кнопками. Пример: 
+            ✉️ С помощью этой команды можно сделать кастомное сообщение с изображением и кнопками. Пример:
 
             #`/custom Some text
 
@@ -313,10 +313,13 @@ embassy:
     webcam:
         location:
             downstairs: Первый этаж
-            downstairs2: Первый этаж 2
-            kitchen: Кухня
             upstairs: Второй этаж
+            upstairs_ptz: Второй этаж (PTZ)
+            balcony: Балкон
+            kitchen: Кухня
+            meeting_room: Переговорка
             outdoors: Входная дверь
+            gateway: Коридор
             facecontrol: Лицо
             printers: Принтерная
         fail: |
@@ -439,7 +442,7 @@ embassy:
         fail: ⚠️ Не получилось остановить воспроизведение
     availablesounds:
         success: |
-            🎶 Список доступных звуков 
+            🎶 Список доступных звуков
             {{sounds}}
         fail: ⚠️ Не получилось найти доступные звуки
     hey:
@@ -451,12 +454,12 @@ embassy:
             default: Ты телеграм бот хакерспейса, ты всегда отвечаешь кратко, смешно и иногда как робот. Не забудь добавлять звуки робота в ответы
             ollama: Отвечай кратко если не скажут иначе.
             guess: |
-                Ты русскоязычный телеграм бот хакерспейса, ты получаешь команды, которые еще не реализованы. 
-                Попробуй угадать, что было бы результатом, если бы они были реализованы и показывай только результат. 
+                Ты русскоязычный телеграм бот хакерспейса, ты получаешь команды, которые еще не реализованы.
+                Попробуй угадать, что было бы результатом, если бы они были реализованы и показывай только результат.
                 Не задавай вопросы, не пиши, что не знаешь, не пиши, что не можешь ответить, не пиши ошибки
         sd:
             help: |
-                🏞 Эта команда позволяет сгенерить изображение с помощью StableDiffusion. 
+                🏞 Эта команда позволяет сгенерить изображение с помощью StableDiffusion.
 
                 #`/txt2img cute cat drawing#`
                 #`/img2img cute cat#` (как подпись к загруженной фотке)
@@ -493,7 +496,7 @@ embassy:
 funds:
     funds: |
         💰 Вот наши текущие сборы:
-          
+
         {{list}}💸 Чтобы узнать, как нам помочь - жми /donate
     fund:
         nofund: Сбор не найден
@@ -613,7 +616,7 @@ service:
             Организационные вопросы и вопросы, касающиеся самого спейса, лучше писать в основном чате @hacker_embassy
         horny: |
             🍆 Ohh, myyy. We have {{newMember}} cuming into our hot and cozy place.
-            Welcum to the club, buddy/gal! 
+            Welcum to the club, buddy/gal!
 
             🍑 Members, please /slap our new guest as juicy as you can.
         key: |
@@ -641,7 +644,7 @@ service:
         prompt: |
             Это сообщения из чата в мессенджере. Укажи основные обсуждаемые темы и кто о них говорил, при необходимости сделай краткое резюме
         help: |
-            📝 Используя эту команду, можно получить краткое резюме основных обсуждаемых тем в чате. ИИ проанализирует последние n сообщений и попытается их обобщить.        
+            📝 Используя эту команду, можно получить краткое резюме основных обсуждаемых тем в чате. ИИ проанализирует последние n сообщений и попытается их обобщить.
             #`/tldr n#` - где n - количество последних сообщений для анализа (по умолчанию 1000)
         notready: В настоящее время эта фича работает в тестовом режиме для чатов без топиков.
     token:
@@ -788,9 +791,9 @@ status:
         fail: "Не могу понять, стоит ли тебе идти в спейс сегодня. Попробуй еще раз"
     emoji:
         help: |
-            🐥 С помощью этой команды можно задать эмодзи 
+            🐥 С помощью этой команды можно задать эмодзи
 
-            #`/setemoji 🍗#` - Установить свой эмодзи 
+            #`/setemoji 🍗#` - Установить свой эмодзи
             #`/setemoji status#` - Посмотреть свой установленный в боте эмодзи
             #`/setemoji remove#` - Удалить свой эмодзи из бота
         fail: ⚠️ Укажите валидный эмодзи.
