--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -642,7 +642,8 @@ service:
             Սրանք հաղորդագրություններ են մեսենջերի չաթից։ Նշիր մարդկանց կողմից քննարկված հիմնական թեմաները, նաև, թե ով է խոսել դրանց մասին։ Անհրաժեշտության դեպքում տրամադրիր ամփոփում։
         help: |
             📝 Այս հրամանի միջոցով կարող ես ստանալ չաթում քննարկված հիմնական թեմաների ամփոփումը։ Բոտը կվերլուծի վերջին n հաղորդագրությունները և կփորձի ամփոփել դրանք։
-            #`/tldr n#` - որտեղ n-ը վերլուծվող հաղորդագրությունների քանակն է (default 1000)
+
+            #`/tldr n optional_prompt#` - որտեղ n-ը վերլուծվող հաղորդագրությունների քանակն է (max 1000)
         notready: Այս feature-ը ներկայումս աշխատում է փորձնական ռեժիմում՝ ոչ թեմատիկ չաթերի համար
     token:
         help: |
