--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -645,7 +645,8 @@ service:
             Це повідомлення з чату в месенджері. Вкажи основні теми обговорення і хто про них говорив, за необхідності зроби короткий підсумок
         help: |
             📝 Використовуючи цю команду, можна отримати короткий підсумок основних тем обговорення в чаті. ШІ проаналізує останні n повідомлень і спробує їх узагальнити.
-            #`/tldr n#` - де n - кількість останніх повідомлень для аналізу (за замовчуванням 1000)
+
+            #`/tldr n optional_prompt#` - де n - кількість останніх повідомлень для аналізу (max 1000)
         notready: Наразі ця функція працює в тестовому режимі для чатів без топіків.
     token:
         help: |
