--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -645,7 +645,8 @@ service:
             Это сообщения из чата в мессенджере. Укажи основные обсуждаемые темы и кто о них говорил, при необходимости сделай краткое резюме
         help: |
             📝 Используя эту команду, можно получить краткое резюме основных обсуждаемых тем в чате. ИИ проанализирует последние n сообщений и попытается их обобщить.
-            #`/tldr n#` - где n - количество последних сообщений для анализа (по умолчанию 1000)
+
+            #`/tldr n optional_prompt#` - где n - количество последних сообщений для анализа (max 1000)
         notready: В настоящее время эта фича работает в тестовом режиме для чатов без топиков.
     token:
         help: |
