--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -467,7 +467,7 @@ embassy:
         ask:
             help: |
                 🔮 Հարց տուր նեյրոնային ցանցին։ Հասանելի է միայն խմբային չաթերում։ Հասանելի մոդելները կարող ես ստուգել այստեղ՝ /models
-
+            usage: |
                 💬 Հարցրու կոնկրետ մոդելին.
                 #`/ask llama3.2:latest Ինչպես patch անել KDE-ն FreeBSD-ի տակ#`
                 💬 Հարցրու GPT-ին.
@@ -476,6 +476,8 @@ embassy:
                 #`/ollama Ի՞նչ է Hackerspace-ը#`
             notset: ⚠️ Բոտը դեռ կազմաձևված չէ այս ֆունկցիոնալության համար
             error: ⚠️ Ինչ-որ բան այն չէ, արդյո՞ք մոդելը գոյություն ունի և աշխատում է։
+            modelnotfound: |
+                ⚠️ #`{{model}}#` մոդելը չի գտնվել, վստա՞հ եք, որ այն գոյություն ունի, թե՞ ճիշտ եք օգտագործում հրամանը։ Ստուգեք հասանելի մոդելները՝ օգտագործելով /models հրամանը
         models: |
             🧠 Հասանելի մոդելներ.
             {{modelsList}}
