--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -473,7 +473,7 @@ embassy:
         ask:
             help: |
                 🔮 Задай вопрос нейросети. Доступно только в групповых чатах спейса. Список моделей можно посмотреть по команде /models
-
+            usage: |
                 💬 Спроси конкретную модель:
                 #`/ask llama3.2:latest Как пропатчить KDE под FreeBSD#`
                 💬 Спроси GPT:
@@ -482,6 +482,8 @@ embassy:
                 #`/ollama Что такое хакерспейс?#`
             notset: ⚠️ Бот еще не настроен для этой функциональности
             error: ⚠️ Что-то пошло не так, а модель существует и сервак не сдох?
+            modelnotfound: |
+                ⚠️ Модель #`{{model}}#` не найдена. А она точно существует и команда правильная? Доступные модели есть тут /models
         models: |
             🧠 Доступные модели:
             {{modelsList}}
