--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -473,7 +473,7 @@ embassy:
         ask:
             help: |
                 🔮 Задай питання нейромережі. Доступно тільки в групових чатах спейсу. Список моделей можна подивитися за командою /models
-
+            usage: |
                 💬 Спитай конкретну модель:
                 #`/ask llama3.2:latest Як пропатчити KDE під FreeBSD#`
                 💬 Спитай GPT:
@@ -482,6 +482,8 @@ embassy:
                 #`/ollama Що таке хакерспейс?#`
             notset: ⚠️ Бот ще не налаштований для цієї функціональності
             error: ⚠️ Щось пішло не так, а модель існує і сервер не здох?
+            modelnotfound: |
+                ⚠️ Модель #`{{model}}#` не знайдено, ви впевнені, що вона існує, чи правильно використовуєте команду? Перевірте доступні моделі за допомогою /models
         models: |
             🧠 Доступні моделі:
             {{modelsList}}
